--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,17 @@ charset-normalizer==3.3.2
 crispy-bootstrap5==2024.2
 cryptography==42.0.5
 defusedxml==0.7.1
-Django==5.0.2
+Django==5.0.3
 django-allauth==0.61.1
 django-crispy-forms==2.1
+django-environ==0.11.2
+gunicorn==21.2.0
 idna==3.6
+nano==0.10.0
+numpy==1.26.4
 oauthlib==3.2.2
-pillow==10.2.0
+packaging==24.0
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
@@ -20,3 +25,4 @@ requests-oauthlib==1.4.0
 sqlparse==0.4.4
 tzdata==2024.1
 urllib3==2.2.1
+whitenoise==6.6.0
